--- a/folder/WeatherProject/weatherapp/templates/main/index.html
+++ b/folder/WeatherProject/weatherapp/templates/main/index.html
@@ -11,6 +11,11 @@
             location.reload();
         }, 15000);
     </script>
+    <style>
+        body{
+            background-color:antiquewhite;
+        }
+    </style>
     
   <title>Weather App </title>
 </head>
@@ -25,9 +30,10 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
     <form method="post" class="col-md">
       {% csrf_token %}
-      <div class=" input-group">
 
-      <input type="text" class="form-control" name="city" placeholder="Choose Your City ...">
+      
+      <div class=" input-group">
+        <input type="text" class="form-control" name="city" placeholder="Choose Your City ...">
       <div class="input-group-btn">
         <button type="submit" class="btn btn-primary">Search</button>
       </div>
@@ -35,6 +41,7 @@
       <form>
   </nav>
   <br> <br>
+  
   <div class="row">
     {% if country_code and coordinate and temp and pressure and humidity %}
     <div class="col d-flex justify-content-center">
